<resources>
    <string name="app_name">OpenRC</string>
    <string name="recv_title">接收器</string>
    <string name="setting_save">保存</string>
    <string name="create_new">+ 新建</string>
    <string name="firmware_update_title">固件版本:</string>
    <string name="firmware_update">升级固件</string>
    <string name="setting_delete">删除</string>
    <string name="recv_not_select">接收器未选择</string>
    <string name="power_title">电量:</string>
    <string name="device_time">刷新时间:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_scale">灵敏度</string>
    <string name="or_channel_setting">通道设置</string>
</resources>