<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="160dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/device_select"
    android:padding="10dp"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="40dp"
        android:textColor="@color/white"
        tools:text="aksdjfhaskdjfhaksjdfhaskjdfh" />

    <LinearLayout
        android:id="@+id/ll_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_device_ip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="8sp"
            tools:text="EspRcRx11595761" />

        <TextView
            android:id="@+id/tv_device_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="8sp"
            tools:text="192:168:0:1" />

        <TextView
            android:id="@+id/tv_device_adc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/power_title"
            android:textColor="@color/white"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_device_adc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="8sp"
            tools:text="192:168:0:1" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_version"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_device_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFEB3B"
            android:textSize="10sp"
            android:text="@string/firmware_update_title"
            tools:text="固件版本:" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/deviceVersion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:gravity="left|center_vertical"
            android:textColor="#FFEB3B"
            android:textStyle="bold"
            android:textSize="8sp"
            tools:text="192:168:0:1" />
        <TextView
            android:id="@+id/firmwareUpdate"
            android:layout_width="50dp"
            android:layout_height="16dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/firmware_update"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/device_time"
            android:textColor="#B8B4B4"
            android:textSize="8sp" />
        <TextView
            android:id="@+id/tv_device_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="#4CAF50"
            android:textSize="8sp"
            tools:text="2020 10-29 10：09：02" />
    </LinearLayout>

</LinearLayout>

