<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rc_tv_color"
    android:orientation="horizontal"
    android:paddingStart="6dp"
    android:paddingEnd="6dp"
    tools:context=".setting.SettingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gpio_setting_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/or_channel_setting"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/saveSetting"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/button_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/setting_save"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bound_bg_2"
            android:minWidth="100dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="模型"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/model_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="通道"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gpio_input_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_scale"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/scale_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>